--- a/config/source.yaml
+++ b/config/source.yaml
@@ -1,7 +1,7 @@
 # 模糊抓取订阅链接
-# - type: webfuzzsub
-#   options:
-#     url: https://raw.githubusercontent.com/du5/free/master/sub.list
+- type: webfuzzsub
+  options:
+    url: https://raw.githubusercontent.com/du5/free/master/sub.list
 
 # 订阅链接
 # - type: subscribe
@@ -71,4 +71,65 @@
   options:
     url: https://raw.githubusercontent.com/itxve/fetch-clash-node/refs/heads/main/node/merge.yaml
 
+# begin 20250208
+- type: webfuzzsub
+  options:
+    url: https://raw.githubusercontent.com/abshare/abshare.github.io/main/README.md
 
+- type: webfuzzsub
+  options:
+    url: https://raw.githubusercontent.com/mksshare/mksshare.github.io/main/README.md
+
+- type: webfuzzsub
+  options:
+    url: https://raw.githubusercontent.com/WilliamStar007/ClashX-V2Ray-TopFreeProxy/main/README.md
+
+- type: webfuzz
+  options:
+    url: https://raw.githubusercontent.com/peasoft/NoMoreWalls/master/list_raw.txt
+
+- type: webfuzz
+  options:
+    url: https://raw.githubusercontent.com/yaney01/Yaney01/main/README.md
+
+# 20230729
+- type: webfuzz
+  options:
+    url: https://raw.githubusercontent.com/HakurouKen/free-node/main/public
+
+# 20230813
+- type: webfuzz
+  options:
+    url: https://raw.githubusercontent.com/MrMohebi/xray-proxy-grabber-telegram/master/collected-proxies/row-url/actives.txt
+
+# 20230909
+- type: webfuzz
+  options:
+    url: https://raw.githubusercontent.com/shabane/kamaji/master/hub/merged.txt
+
+# 20231108
+- type: webfuzz
+  options:
+    url: https://raw.githubusercontent.com/barry-far/V2ray-Configs/main/All_Configs_Sub.txt
+
+# 20240218
+# TODO: Implementation de hysteria/hy2 protocol
+# - type: subscribe
+#   options:
+#     url: https://raw.githubusercontent.com/markbang/chromegopacs/main/hy2pac.txt
+
+# 20240415
+- type: subscribe
+  options:
+    url: https://raw.githubusercontent.com/imohammadkhalili/V2RAY/main/Mkhalili
+
+# 网页模糊抓取
+- type: webfuzz
+  options:
+    url: https://merlinblog.xyz/wiki/freess.html
+
+# clash格式订阅链接
+- type: clash
+  options:
+    url: https://raw.githubusercontent.com/du5/free/master/file/0909/Clash.yaml
+# end 20250208
